--- a/trunk/Footballquiz/AndroidManifest.xml
+++ b/trunk/Footballquiz/AndroidManifest.xml
@@ -9,11 +9,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-     <!-- Used to avoid sending an ad request if there is no connectivity. -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- Used to avoid sending an ad request if there is no connectivity. -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="true" 
+        android:allowBackup="true"
         android:icon="@drawable/ic_app"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -23,7 +23,8 @@
 
         <activity
             android:name="com.gtotek.football.activity.SplashScreenActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,26 +33,24 @@
         </activity>
         <activity
             android:name="com.gtotek.football.activity.PlayingImageActivity"
-            android:label="@string/app_name" >
-        </activity> 
-        <activity
-            android:name="com.gtotek.football.activity.WinActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
-       
         <activity
             android:name="com.gtotek.football.activity.VictoryActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
-      
         <activity
             android:name="com.gtotek.football.activity.StartPlayActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
-         
+
         <!-- Activity required to show ad overlays. -->
-        <activity android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
     </application>
 
 </manifest>
